--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap');
 
 :root{
-  --primary: #efb6b2;
+  --primary: #262626;
+  --progress: #9be9a8;
   --secondary: #4e4e4e;
   --error: #ff4a4a;
 }
@@ -30,10 +31,45 @@ body{
 }
 
 /* upload form styles */
-
+form{
+  margin: 30px auto 10px;
+  text-align: center;
+}
+label{
+  display: block;
+  width: 30px;
+  height: 30px;
+  border: 1px solid var(--primary);
+  border-radius: 50%;
+  margin: 10px auto;
+  line-height: 30px;
+  color: var(--primary);
+  font-weight: bold;
+  font-size: 24px;
+}
+label input{
+  height: 0;
+  width: 0;
+  opacity: 0;
+}
+label:hover{
+  background: var(--primary);
+  color: white;
+}
+.output{
+  height: 60px;
+  font-size: 0.8rem;
+}
+.error{
+  color: var(--error);
+}
 
 /* progress bar styles */
-
+.progress-bar {
+  height: 5px;
+  background: var(--progress);
+  margin-top: 20px;
+}
 
 /* image grid styles */
 
