--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap'); */
 
+ @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
+ @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css);
 :root{
   --primary: #262626;
   --progress: #9be9a8;
@@ -9,7 +11,7 @@
 
 /* base styles & title */
 body{
-  font-family: "Noto Serif";
+  font-family: "SpoqaHanSans Serif";
   color: var(--secondary);
 }
 .App{
@@ -72,6 +74,29 @@ label:hover{
 }
 
 /* image grid styles */
+
+.img-grid{
+  margin: 20px auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 40px;
+}
+.img-wrap{
+  overflow: hidden;
+  height: 0;
+  padding: 50% 0;
+  /* padding controls height, will always be perfectly square regardless of width */
+  position: relative;
+  opacity: 0.8;
+}
+.img-wrap img{
+  min-width: 100%;
+  min-height: 100%;
+  max-width: 150%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 
 
 /* modal styles */
