--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ label{
   border: 1px solid var(--primary);
   border-radius: 50%;
   margin: 10px auto;
-  line-height: 30px;
+  line-height: 25px;
   color: var(--primary);
   font-weight: bold;
   font-size: 24px;
@@ -100,3 +100,21 @@ label:hover{
 
 
 /* modal styles */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+}
+
+.backdrop img {
+  display: block;
+  max-width: 60%;
+  max-height: 80%;
+  margin: 70px auto;
+  box-shadow: 3px 5px 7px rgba(0,0,0,0.5);
+  /* border: 1px solid #fff; */
+}
