--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,11 @@
  @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
  @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css);
 :root{
-  --primary: #262626;
+  --primary: #efb6b2;
   --progress: #9be9a8;
   --secondary: #4e4e4e;
   --error: #ff4a4a;
+  --delete: #efb6b2;
 }
 
 /* base styles & title */
@@ -41,7 +42,7 @@ label{
   display: block;
   width: 30px;
   height: 30px;
-  border: 1px solid var(--primary);
+  border: 2px solid var(--primary);
   border-radius: 50%;
   margin: 10px auto;
   line-height: 25px;
@@ -114,7 +115,30 @@ label:hover{
   display: block;
   max-width: 60%;
   max-height: 80%;
-  margin: 70px auto;
+  margin: 70px auto 0;
   box-shadow: 3px 5px 7px rgba(0,0,0,0.5);
   /* border: 1px solid #fff; */
+}
+
+
+ /* delete image */
+
+ .delete {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border: 2px solid var(--delete);
+  border-radius: 50%;
+  margin: 10px auto;
+  color: var(--delete);
+  font-weight: bold;
+  font-size: 14px;
+ }
+
+ 
+ .delete:hover{
+  background: var(--delete);
+  color: white;
 }
